--- a/deployment/windows/index.html
+++ b/deployment/windows/index.html
@@ -1206,6 +1206,7 @@ url:http://xxx.xxx.xxx
 <li>输入 <code>git clone https://github.com/SAGIRI-kawaii/sagiri-bot.git</code></li>
 <li>等待下载完成即可</li>
 <li>什么？你问我太慢怎么办？我的建议是，找一台可以快速链接 <code>github</code> 的机器下载再传过来</li>
+<li>或者你可以使用代理站：<code>git clone https://ghproxy.com/github.com/SAGIRI-kawaii/sagiri-bot.git</code></li>
 </ul>
 <h3 id="_6">直接下载</h3>
 <ul>
